Fixed hero scaling on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -62,8 +62,8 @@ html {
 
 #hero {
     position: absolute;
-    top: 3%;
-    right: 1%;  
+    top: 0.3%;
+    left: 0.1%;  
 }
 
 
